# Gui-Projects

./: README.md
T-Rex Game/: Makefile.win  T-Rex.dev  T-Rex.layout  gmon.out  main.cpp  trex_top5.txt
badmintor tournement manager/: Makefile.win  Project1.dev  Project1.layout  dev c++.dev  gmon.out  main.cpp  players.csv
finalyy/: flappy_bird_design.docx  flappy_bird_presentation_updated.pptx  project game.cpp  test.html
finalyy/live back again/: Project1.dev  Project1.layout  deepseek_makefile_20250520_5fb099.mk  explain doc.docx  gmon.out  humancode.cpp  main.cpp
finalyy/practisee/: Makefile.win  Project1.layout  gmon.out  main.cpp
finalyy/practisee2/: Makefile.win  Project1.layout  gmon.out  main.cpp
finalyy/test/: Makefile.win  flappy bird with chatgpt-5.dev  flappy bird with chatgpt-5.layout  gmon.out  main.cpp
finalyy/when i was ded/: Project1.dev  Project1.layout  explain doc.docx  explain.cpp  gmon.out  main.cpp
first modified (not t rex)/: Makefile.win  Project.dev  Project.layout  main.cpp
first more modified (skull runner)/: Makefile.win  main.cpp  skullRun.dev  skullRun.layout
first project (t rex)/: GuiApp.cpp  GuiApp.dev  GuiApp.layout  Makefile.win  not T rex run.dev
me ded/: Makefile.win  Project1.dev  Project1.layout  Simple_ToDo_List_Project_Report (1).docx  TaskManager.cpp  TaskManager.h  main.cpp  tasks.txt
qt try/untitled/: CMakeLists.txt  game1.cpp  game1.h
super market/: Makefile.win  items.txt  main.cpp  supermarket.dev
super modified (skullrunner)/: Makefile.win  Project1.dev  Project1.layout  main.cpp
